--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="author" content="Arthur Iturres" />
+    <link rel="icon" type="image/png" href="/arthur_iturres-logo.png" />
     <link rel="apple-touch-icon" href="" />
-    <title>Vite + React + TS</title>
+    <title>Web Dev Handbook</title>
   </head>
-  <body>
+  <body class="light">
+    <select>
+      <option value="light">Light</option>
+      <option value="dark">Dark</option>
+    </select>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
